2005-05-08  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-14  Josep Puigdemont  <josep@imatge-sintetica.com>

	* configure.in: Added ca to ALL_LINGUAS.

2005-02-13  David Lodge  <dave@cirt.net>
  
        * configure.in: Added en_GB to ALL_LINGUAS.

2005-02-10  Kostas Papadimas  <pkst@gnome.org>
  
        * configure.in: Added el (Greek) to ALL_LINGUAS.

2005-02-04  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-user-share 0.5 ===
	
2005-02-04  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am (SUBDIRS):
	Add po subdir.

2005-02-04  Alexander Larsson  <alexl@redhat.com>

	* desktop_gnome_file_sharing.schemas.in:
	* user_share.c: (publish_service):
	Fix some strings: #163652, #163647, #163646.

	* NEWS:
	Update for 0.5

2005-02-01  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added da (Danish) to ALL_LINGUAS.

2005-01-23  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2005-01-22  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added ko to ALL_LINGUAS.

2005-01-18  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2005-01-16  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS.

2005-01-15  Frank Arnold  <farnold@cvs.gnome.org>

	* configure.in: Added de to ALL_LINGUAS.

2005-01-15  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-01-14	Amanpreet Singh Alam <amanpreetalam@yahoo.com>
	
	*configure.in: Added "pa" Punjabi to ALL_LINGUAS

2005-01-12  Tommi Vainikainen  <thv@iki.fi>

	* configure.in: Added "fi" (Finnish) to ALL_LINGUAS.

2005-01-11  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.
