@@ -1,3 +1,10 @@
+2005-05-15  David Zeuthen  <davidz@redhat.com>
+
+	* user_share.c (publish_service): Fix signedness
+
+	* md5.c (gnome_user_share_md5_string): Fix signedness
+	(gnome_user_share_md5_digest_to_ascii): Fix signedness
+
 2005-05-08  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
         * configure.in: Added "zh_TW" to ALL_LINGUAS.
